<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="12sp"
    android:textStyle="bold">

    <LinearLayout
        android:id="@+id/alexu_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:showDividers="beginning|none|middle|end"
        tools:context="eg.edu.alexu.alexandriauniversity.AlexUDetailFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/aboutalexandriauniversity"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textColor="#000000"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/dsc"
                android:src="@drawable/aboutus_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="none"
                android:text="@string/foundedin"
                android:textColor="#000000"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="none"
                android:text="@string/foundedin1"
                android:textColor="#000000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/dsc"
                android:src="@drawable/aboutus_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                android:text="@string/history"
                android:textColor="#000000"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="none"
                android:text="@string/history1"
                android:textColor="#000000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/dsc"
                android:src="@drawable/aboutus_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                android:text="@string/mission"
                android:textColor="#000000"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="none"
                android:text="@string/mission1"
                android:textColor="#000000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/dsc"
                android:src="@drawable/aboutus_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                android:text="@string/vision"
                android:textColor="#000000"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="none"
                android:text="@string/vision1"
                android:textColor="#000000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/dsc"
                android:src="@drawable/aboutus_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                android:text="@string/goals"
                android:textColor="#000000"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="none"
                android:text="@string/goals1"
                android:textColor="#000000"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>